--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,7 @@ margin-top: 28%;
                 </svg>
             </div>
             
-            <h1 class="text-3xl font-semibold mb-3 text-text-primary">Calculadora de Tributação</h1>
+            <h1 class="text-3xl font-semibold mb-3 text-text-primary">Sistema de Tributação</h1>
             <h1 class="text-3xl text-text-secondary mb-6">Mercado Americano</h1>
             
             <form class="space-y-4">
